// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Heading" renders H! (dark theme) 1`] = `
<div
  className="css-1mc7zwm-StyledAppContainer"
>
  <h1
    className="css-l5qfww-H1"
  >
    H1
  </h1>
</div>
`;

exports[`"Heading" renders H1 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <h1
    className="css-1mxde5b-H1"
  >
    H1
  </h1>
</div>
`;

exports[`"Heading" renders H1 2`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <h1
    className="css-1mxde5b-H1"
  >
    H1
  </h1>
</div>
`;

exports[`"Heading" renders H2 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <h2
    className="css-7ld864-H2"
  >
    H2
  </h2>
</div>
`;

exports[`"Heading" renders H3 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <h3
    className="css-1i6ms6d-H3"
  >
    H3
  </h3>
</div>
`;

exports[`"Heading" renders H4 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <h3
    className="css-1gksb4j-H4"
  >
    H4
  </h3>
</div>
`;
